--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,7 @@ dependencies = [
     "langchain>=0.3.24",
     "langchain-ollama>=0.3.2",
     "ollama>=0.4.8",
+    "pyaudio>=0.2.14",
     "pyttsx3>=2.98",
+    "speechrecognition>=3.14.2",
 ]
